# drupal-ai-module-generator-deepseek-mcp

./: README.md  pyproject.toml
src/drupal_ai_module_generator/: __init__.py  cli.py  generator.py  mcp_client.py  models.py  prompt.py  providers.py  templates.py
tests/: test_cli.py  test_generator.py  test_mcp_client.py
